--- a/resources/css/partials/_media.scss
+++ b/resources/css/partials/_media.scss
@@ -13,21 +13,28 @@
     width: 18rem;
   }
 
+  .nav__location {
+    width: 1.25rem;
+  }
+
   // Filters section 
   .filters {
-    .filters__head {
+    &__head {
       @include flex(space-around, center, row);
     }
   }
 
+  // Business section
   .business__phone {
     max-width: 60%;
-    .business__call {
-      font-size: $font-m;
-    }
-    .business__number {
-      font-size: $font-l;
-    }
+  }
+
+  .business__number {
+    font-size: $font-l;
+  }
+
+  .business__call {
+    font-size: $font-m;
   }
 
   .business__contact {
@@ -43,74 +50,52 @@
 
 // Media query for desktop view ---------- //
 @media screen and (min-width: 904px) {
-
-  /* Main Section Desktop Styles ----- */
-  .business__container {
-    @include flex(space-between, center, row);
-    padding: 2.5rem 1rem 1rem 1rem;
-    width: 1250px;
-    max-width: 100%;
-    margin: 0 auto 3rem auto;
-  }
-
-  .business {
-    margin: 0.5rem;
-    border-radius: 10px;
-    width: 40% !important;
-    box-shadow: 3px 3px 3px 3px #999, 3px 3px 3px -3px #999, 3px 3px 3px -3px #999, -3px 3px 3px -3px #999;
-  }
-
-  .business__title {
-    margin-bottom: 2rem;
-  }
-
-  .business__phone--mobile {
-    display: none;
-  }
-
-  .business__phone {
-    background-color: $color-light;
-    color: black;
-    .business__number--desktop {
-      @include flex(center, center, row);
-    }
-  }
-
-  .business__phone--desktop {
-    display: block;
-    font-size: $font-l;
-    border-top: 1px solid #999;
-    padding-top: 1rem;
-    border-radius: 0;
-  }
-
-  .business__services {
-    padding-right: 1rem;
-    padding-left: 1rem;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-
+  // Baner section ----- //
   .banner {
     height: 150px;
     background-position: center;
     background-repeat: no-repeat;
     overflow: hidden;
+    margin-bottom: -2rem;
   }
 
-  // Navigation styles ----- //
-  .nav {
+  // Navigation start ----- //
+  .nav__container {
     @include flex(space-between, center, row);
     height: 100px;
     margin: 0 auto;
     width: 100%;  
     z-index: 9;   
     display: block;
-    .nav__li--dk {
+  }
+
+  .nav { 
+    @include flex(space-between, center, row);
+    height: 100px;
+    margin: 0 auto;
+    max-width: 1250px;
+
+    &__menu {
+      @include flex(center, center, row);
+      height: 100%;
+      width: auto;
+      position: static;
+    }
+
+    &__li--dk {
       display: inline;
       margin-top: 0;
     }
-    .nav__li {
+
+    &__list {
+      @include font($font-s, $font-bold);
+      @include flex(center, center, row);
+      .nav__li::after {
+        background-image: none;
+      }
+    }
+
+    &__li {
       background-color: $color-light;
       display: inline;
       a:visited {
@@ -120,85 +105,82 @@
         color: $color-secondary;
       }
     }
-    .nav__menu {
-      @include flex(center, center, row);
-      height: 100%;
-      width: auto;
-      position: static;
+
+    &__find--dk {
+      @include inline-flex(center, center, row);
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      border: 2px solid $color-bright;
+      color: $color-bright;
+      padding: 0.75rem 1.25rem;
+      border-radius: 5px;
+      margin: 0rem 1rem 0rem 1rem;
+      text-decoration-style: none;
+      &:hover {
+        color: $color-secondary;
+      }
     }
-  }
 
-  .nav__list {
-    @include font($font-m, $font-bold);
-  }
-
-  .nav__find--dk {
-    border: 2px solid $color-primary;
-    color: $color-primary;
-    padding: 0.75rem 1.25rem;
-    border-radius: 5px;
-    margin: 0rem 1rem 0rem 1rem;
-    text-decoration-style: none;
-    &:hover {
-      color: $color-secondary;
+    &__location {
+      margin-right: 0.50rem;
+      width: 0.85rem;
     }
-  }
 
-  .nav__container {
-    @include flex(space-between, center, row);
-    height: 100px;
-    margin: 0 auto;
-    max-width: 1250px;
-  }
-
-  .nav__content {
-    box-shadow: none;
-    .nav__logo {
+    &__logo {
       width: 14rem;
     }
-  }
 
-  // Mobile only navigation ----- //
-  .nav__close, .nav__title--mobile, .nav__link--mobile, .nav__find {
-    display: none;
-  }
-
-  .nav__list .nav__li::after {
-    background-image: none;
+    // Mobile only navigation ----- //
+    &__close, &__title--mobile, &__link--mobile, &__find {
+      display: none;
+    }
   }
   // Nav end ----- //
 
 
-  // Top content ----- //
-
+  // Top content start ----- //
   .top {
     background-color: $color-dark;
     display: block;
-  }
 
-  .top__item {
-    list-style-type: none;
-    display: inline;
-    margin: 1rem;
-    color: $color-light;
-    &:hover {
-      color: $color-background;
+    &__content {
+      @include flex(flex-end, stretch, row);
+      @include font($font-xs, $font-regular);
+      max-width: 1225px;
+      color: $color-light;
+      padding: 1rem 1.25rem 1rem 0rem;
+      margin: 0 auto;
     }
-  } 
 
-  .top__content {
-    @include flex(flex-end, stretch, row);
-    max-width: 1250px;
-    color: $color-light;
-    font-size: $font-xs;
-    padding: 1rem 1.25rem 1rem 0rem;
-    margin: 0 auto;
+    &__item {
+      list-style-type: none;
+      display: inline;
+      margin: 1rem;
+      color: $color-light;
+      
+      &:hover {
+        color: $color-background;
+      }
+    }
+
+    &__item--com {
+      margin-right: 0.5rem;
+    }
+
+    &__list {
+      @include flex(center, center, row);
+    }
+
+    &__image {
+      width: 0.75rem;
+    }
   }
   // Top content end ----- //
 
   /* Filter Section ----- */
   .filters {
-    @include flex(flex-start, center, row);
+    @include flex(center, center, row);
     background-color: $color-background;
     max-width: 1245px;
     margin: 0 auto;
@@ -206,62 +188,120 @@
     border-radius: 10px;
     position: relative;
     z-index: 3;
-  }
-  
-  .filters__head {
-    @include flex(space-between, center, row);
-    max-width: 90%;
-    margin: 0 auto;
-    background-color: $color-background;
-    border: none;
-  }
 
-  .filters__form {
-    background-color: $color-background;
-    max-width: 90%;
-    margin: auto;
-    padding: 2.25rem 1rem 1rem 1rem;
-    border: none;
-    display: inline-flex;
-    align-items: center;
-    box-shadow: none;
-  }
+    &__head {
+      margin: 0 auto;
+      margin: 0;
+      background-color: $color-background;
+      border: none;
+    }
 
-  .filters__question {
-    width: 55%;
-    top: -0.6rem;
-    margin-right: 0rem;
-    display: none;
-  }
+    &__result {
+      border-right: 1px solid $color-border;
+      padding-right: 2rem;
+    }
 
-  .filters__mobile {
-    display: none;
-  }
+    &__input {
+      margin-top: 0;
+      margin-right: 1rem;
+    }
 
-  .filters__title--desktop {
-    display: inline;
-    margin-left: 1rem;
-  }
+    &__form {
+      @include flex(center, center, row);
+      background-color: $color-background;
+      height: auto;
+      border: none;
+      box-shadow: none;
+      width: 60%;
+      margin: 0;
+    }
 
-  .filters__form form {
-    display: inline-flex;
-    align-items: center;
-    border: none;
-  }
+    &__question {
+      position: static;
+      width: 1.25rem;
+    }
 
-  .filters__form .filters__input, .filters__label {
-    margin-right: 1rem;
-  }
+    &__mobile {
+      display: none;
+    }
 
-  .filters__input {
-    margin-top: 0;
-  }
+    &__title--desktop {
+      display: inline;
+      margin-left: 2rem;
+    }
 
-  .filters__result {
-    border-right: 1px solid #a3a5a883;
-    padding-right: 2rem;
+    &__label {
+      margin-right: 1rem;
+    }
   }
   // Filter end ----- //
+
+  /* Main Section Desktop Styles ----- */
+  .business__container {
+    @include flex(space-between, center, row);
+    padding: 2.5rem 1rem 1rem 1rem;
+    width: 1250px;
+    max-width: 100%;
+    margin: 0 auto 4rem auto;
+  }
+
+  .business {
+    margin: 0.5rem;
+    padding-top: 0;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px 3px #999, 3px 3px 3px -3px #999, 3px 3px 3px -3px #999, -3px 3px 3px -3px #999;
+
+    &__title--container {
+      @include flex(center, center, row);
+      border-bottom: 1px solid $color-border;
+      padding-top: 2.5rem;
+      padding-bottom: 2.5rem;
+      width: 90%;
+      margin: 0 auto 1rem auto;
+    }
+
+    &__title--container--two {
+      padding: 1.8rem;
+    }
+
+    &__title {
+      @include font($font-l, $font-light);
+      margin-bottom: 0rem;
+    }
+
+    &__contact {
+      max-width: 55%;
+    }
+
+    &__phone {
+      @include font($font-xl, $font-bold);
+      display: block;
+      // border-top: 1px solid #999;
+      // padding-top: 1rem;
+      border-radius: 0;
+    }
+
+    &__number--desktop {
+      @include flex(center, center, row);
+    }
+
+    &__services {
+      padding-right: 1rem;
+      padding-left: 1rem;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+
+    &__phone {
+      background-color: $color-light;
+      color: black;
+    }
+
+    //Mobile only display 
+    &__phone--mobile, &__tap, &__icon, &__number {
+      display: none;
+    }
+  }
 
 
   /* Footer Styles ----- */
@@ -269,44 +309,57 @@
     color: $color-light;
     text-align: center;
   }
-  
-  .footer--top {
-    background-color: $color-primary;
-    padding-top: 2rem;
-    padding-bottom: 0.75rem;
-  }
-  
-  .footer--bottom {
-    background-color: $color-footer;
-    font-size: $font-xs;
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-  
-  .footer__social {
-    @include flex(center, center, row);
-    .footer__icons {
+
+  .footer {
+
+    &--top {
+      background-color: $color-primary;
+      padding-top: 2rem;
+      padding-bottom: 0.75rem;
+    }
+
+    &--bottom {
+      background-color: $color-bright;
+      font-size: $font-xs;
+      padding-top: 1.25rem;
+      padding-bottom: 1.25rem;
+    }
+
+    &__social {
+      @include flex(center, center, row);
+    }
+
+    &__icons {
       width: 7rem;
       margin-left: 1rem;
     }
-    .footer__img {
+
+    &__img {
       max-height: 50%;
       margin-right: 10px;
     }
-    .footer__connect {
+
+    &__connect {
       font-weight: $font-regular;
       margin-right: 1rem;
     }
-  }
-  
-  .footer__text {
-    max-width: 90%;
-    margin: 0 auto;
-    padding-bottom: 10px;
-    border: none;
-  }
 
-  .footer__text {
-    display: none;
+    &__text {
+      max-width: 90%;
+      margin: 0 0.5rem;
+      border: none;
+      padding-bottom: 0rem;
+    }
+
+    &__text--border {
+      display: none;
+    }
+  }
+}
+
+// Desktop big media query 
+@media (min-width: 1170px) {
+  .business__title {
+    @include font($font-xl, $font-light);
   }
 }
