--- a/resources/css/partials/_modal.scss
+++ b/resources/css/partials/_modal.scss
@@ -1,4 +1,4 @@
-/* Modal Styles ---------- */
+//----- Modal styles start -----//
 .modal {
   display: none; 
   position: fixed; 
@@ -10,96 +10,112 @@
   overflow: auto; 
   background-color: rgb(0,0,0); 
   background-color: rgba(0,0,0,0.4); 
-  .modal__content {
+
+  &__content {
     position: relative;
     background-color: #fefefe;
     margin: 15% auto; 
-    border: 1px solid #888;
+    border: 1px solid $color-border;
     width: 350px; 
   }
-}
 
-.modal__action {
-  margin-bottom: 1.5rem;
-}
+  &__head {
+    background-color: $color-dark;
+    color: $color-light;
+    padding: 1.30rem;
+  }
 
-.modal__inputs {
-  @include font($font-m, $font-regular);
-  position: relative;
-}
+  &__business {
+    @include font($font-l, $font-light);
+  }
 
-.modal__circle--one {
-  width: 1.25rem;
-  position: absolute;
-  top: -.15rem;
-  right: 0rem;
-}
+  &__email {
+    @include font($font-s, $font-regular);
+    margin-bottom: 0.5rem;
+  }
+  
+  &__light {
+    @include font($font-xs, $font-regular);
+    @include inline-flex(center, center, row);
+  }
 
-.modal__circle--two {
-  width: 1.25rem;
-  position: absolute;
-  top: 5.35rem;
-  right: 11rem;
-}
+  &__light--top {
+    margin-right: 0.75rem;
+  }
 
-.modal__circle--three {
-  width: 1.25rem;
-  position: absolute;
-  top: 10.9rem;
-  right: 0rem;
-}
+  &__radios {
+    @include flex(flex-start, center, row);
+    width: 100%;
+    border-bottom: 1px solid $color-border;
+    margin-bottom: 2rem;
+    padding-bottom: 1rem;
+  }
 
-.modal__opt {
-  @include font($font-xs, $font-light);
-  font-style: italic;
-  position: absolute;
-  right: 0rem;
-  top: 16.95rem;
-}
+  &__radio {
+    margin-right: 0.75rem;
+    text-indent: -9999px;
+  }
+  
+  &__question {
+    @include inline-flex(flex-start, stretch, column);
+  }
 
-.modal__opt--dk {
-  display: none;
-}
+  &__action {
+    margin-bottom: 1.5rem;
+  }
 
-.modal__close {
-  position: absolute;
-  top: 0.6rem;
-  left: 20.3rem;
-  color: #aaa;
-  font-size: $font-l;
-  font-weight: $font-bold;
-}
+  &__inputs {
+    @include font($font-m, $font-regular);
+    position: relative;
+  }
 
-.modal__close:hover,
-.modal__close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
+  &__circle {
+    position: absolute;
+    width: 1.25rem;
+  }
 
-.modal__form {
-  @include font($font-s, $font-regular);
-  padding: 1rem;
-  .modal__label {
+  &__circle--one {
+    top: -.15rem;
+    right: 0rem;
+  }
+
+  &__circle--two {
+    top: 5.15rem;
+    right: 11rem;
+  }
+
+  &__circle--three {
+    top: 10.4rem;
+    right: 0rem;
+  }
+
+  &__opt {
+    @include font($font-xs, $font-light);
+    color: #868686;
+    font-style: italic;
+    position: absolute;
+    right: 0rem;
+    top: 16.2rem;
+  }
+
+  &__close {
+    display: none;
+  }
+
+  //Modal form section 
+  &__form {
+    @include font($font-s, $font-regular);
+    padding: 1rem;
+  }
+
+  &__label {
     @include font($font-s, $font-regular);
     display: block;
     margin-bottom: 8px;
     padding-left: 0;
   }
-  .modal__legend {
-    color: #696b6d;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-  .modal__input {
-    @include font($font-m, $font-regular);
-    margin-bottom: 1.25rem;
-    height: 2.70rem;
-    background-color: $color-light;
-    width: 100%;
-    border: 0.75px solid #b5b8b9;
-  }
-  .modal__textarea {
+
+  &__textarea {
     @include font($font-m, $font-regular);
     height: 4rem;
     margin-bottom: 1.25rem;
@@ -107,136 +123,181 @@
     width: 100%;
     border: 0.75px solid #a5a7a8;
   }
-}
 
-.modal__head {
-  background-color: $color-dark;
-  color: $color-light;
-  padding: 1.30rem;
-  .modal__email {
-    @include font($font-s, $font-regular);
-    margin-bottom: 0.5rem;
-  }
-  .modal__business {
-    @include font($font-l, $font-light);
-  }
-}
-
-.modal__light {
-  @include font($font-xs, $font-regular);
-  display: inline !important;
-}
-
-.modal__question {
-  display: inline-flex;
-  flex-direction: column;
-}
-
-.modal__input--radio {
-  width: 5%;
-  height: 1rem;
-  margin-bottom: 1rem;
-}
-
-.modal__input--num {
-  @include font($font-m, $font-regular);
-    height: 2.70rem;
+  &__input {
+    @include font($font-m, $font-regular);
     margin-bottom: 1.25rem;
+    height: 2.70rem;
     background-color: $color-light;
+    width: 100%;
     border: 0.75px solid #b5b8b9;
-    width: 45%;
-}
-
-.modal__newsletter {
-  @include font($font-s, $font-regular);
-  text-align: left;
-}
-
-.modal__submit[type=submit] {
-  color: #29d4c6;
-  float: right;
-}
-
-.modal__submit--desktop {
-  display: none;
-}
-
-.modal__arrow {
-  display: none;
-}
-
-// Desktop Modal Styles 
-@media screen and (min-width: 904px) {
-  .modal {
-    .modal__content {
-      width: 600px;
-    }
-    .modal__head {
-      padding: 2.3rem;
-    }
-    .modal__form {
-      padding: 2rem;
-    }
-    .modal__close {
-      color: $color-light;
-      top: 0.6rem;
-      left: 36rem;
-    }
   }
-  .modal__inputs {
-    background-color: #eeebeb;
-    padding: 1.5rem;
+
+  &__legend {
+    color: #696b6d;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
-  .modal__input {
-    width: 100%;
+
+  &__newsletter {
+    @include font($font-s, $font-regular);
+    text-align: left;
   }
-  .modal__textarea {
-    width: 100%;
+
+  &__input--radio {
+    width: 5%;
+    height: 1rem;
+    margin-bottom: 1rem;
+    margin-left: -1rem;
   }
-  .modal__submit {
+
+  &__input--num {
+    @include font($font-m, $font-regular);
+      height: 2.70rem;
+      margin-bottom: 1.25rem;
+      background-color: $color-light;
+      border: 0.75px solid #b5b8b9;
+      width: 45%;
+  }
+
+  &__submit[type=submit] {
+    color: #29d4c6;
+    float: right;
+  }
+
+  //Desktop only modal elements 
+  &__opt--dk, &__submit--desktop, &__arrow {
     display: none;
   }
-  .modal__submit--desktop[type=submit] {
-    @include font($font-s, $font-regular);
-    display: block;
-    margin: 0 auto;
+}
+//----- Modal styles end -----//
+
+//----- Desktop Modal Styles -----//
+@media screen and (min-width: 904px) {
+  .modal {
+    &__content {
+      width: 600px;
+    }
+
+    &__head {
+      padding: 2.3rem;
+    }
+
+    &__form {
+      padding: 2rem;
+    }
+
+    &__close {
+      @include font($font-xl, $font-bold);
+      display: block;
+      color: $color-light;
+      top: 0.25rem;
+      left: 35.75rem;
+      position: absolute;
+      color: $color-light;
+    }
+
+    &__close:hover,
+    &__close:focus {
+      color: $color-black;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    &__inputs {
+      background-color: $color-background;
+      padding: 1.5rem;
+    }
+
+    &__input {
+      width: 100%;
+    }
+
+    &__textarea {
+      width: 100%;
+    }
+
+    &__submit {
+      display: none;
+    }
+
+    &__opt--dk {
+      @include font($font-xs, $font-light);
+      color: #868686;
+      font-style: italic;
+      display: block;
+      position: absolute;
+      right: 1.5rem;
+      top: 24.5rem;
+    }
+
+    &__submit--desktop[type=submit] {
+      @include font($font-s, $font-regular);
+      display: block;
+      margin: 0 auto;
+    }
+
+    &__desktop {
+      @include flex(center, center, row);
+    }
+
+    &__submit--container {
+      display: inline-flex;
+    }
+
+    &__arrow {
+      display: inline;
+      width: auto;
+      height: 1rem;
+      margin-left: 0.25rem;
+    }
+
+    &__circle--one {
+      top: 1.35rem;
+      right: 1.55rem;
+    }
+
+    &__circle--two {
+      top: 6.65rem;
+      right: 18.3rem;
+    }
+    &__circle--three {
+      top: 12rem;
+      right: 1.5rem;
+    }
+    &__opt {
+      right: 1.5rem;
+      top: 17.7rem;
+    }
+    &__light {
+      color: #eeebeb;
+    }
+    &__radio {
+      color: $color-black;
+      text-indent: 0px;
+      margin: 0 auto;
+      text-align: center;
+      padding: 0.5rem 1.25rem;
+    }
+    &__input--radio {
+      margin-right: -0.5rem;
+    }
+    &__light--top {
+      margin-right: -0.75rem;
+    }
   }
-  .modal__desktop {
-    @include flex(center, center, row);
-  }
-  .modal__submit--container {
-    display: inline-flex;
-  }
-  .modal__arrow {
-    display: inline;
+  input[type="radio"] + label span {
+    display:inline-block;
     width: auto;
-    height: 1rem;
-    margin-left: 0.25rem;
+    height: auto;
+    border: 1px solid #b4b1b1;
+    border-radius: 5px;
+    //padding: 1rem 2rem;
   }
-  .modal__circle--one {
-    top: 1.34rem;
-    right: 1.5rem;
+  input[type="radio"]:checked + label span {
+    background-color: #2bcece;
+    color: $color-light;
+    border: 1px solid #b4b1b1;
   }
-  
-  .modal__circle--two {
-    top: 6.85rem;
-    right: 18.3rem;
-  }
-  .modal__circle--three {
-    top: 12.4rem;
-    right: 1.5rem;
-  }
-  .modal__opt {
-    right: 1.5rem;
-    top: 18.5rem;
-  }
-  
-  .modal__opt--dk {
-    @include font($font-xs, $font-light);
-    font-style: italic;
-    display: block;
-    position: absolute;
-    right: 1.5rem;
-    top: 25.25rem;
-  }
+  //----- Desktop modal end -----//
 }
