--- a/resources/css/partials/_base.scss
+++ b/resources/css/partials/_base.scss
@@ -28,6 +28,7 @@ $color-light: #ffffff;
 $color-border: #d1cdcd;
 $color-black: #000000;
 $color-background: #f5f3f3;
+$color-shadow: #696b6d;
 
 // Global Mixins
 @mixin flex($justify-content, $align-items, $flex-direction) {
@@ -71,48 +72,4 @@ a {
     text-decoration: none;
     color: $color-primary;
   }
-}
-
-button, input[type="submit"], input[type="reset"] {
-  background: none;
-  color: inherit;
-  border: none;
-  padding: 0;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
-}
-
-input[type=checkbox] {
-  visibility: hidden;
-}
-
-input[type=radio] {
-  visibility: hidden;
-}
-
-input[type="checkbox"] + label span {
-  display:inline-block;
-  width:21px;
-  height:21px;
-  background-color: $color-light;
-  border: 1px solid #b4b1b1;
-  border-radius: 5px;
-}
-
-input[type="checkbox"]:checked + label span {
-  border: 7px solid $color-primary;
-}
-
-input[type="radio"] + label span {
-  display:inline-block;
-  width:17px;
-  height:17px;
-  background-color: $color-light;
-  border: 1px solid #b4b1b1;
-  border-radius: 5px;
-}
-
-input[type="radio"]:checked + label span {
-  border: 6px solid $color-primary;
 }
