--- a/resources/css/partials/_inputs.scss
+++ b/resources/css/partials/_inputs.scss
@@ -1,5 +1,5 @@
-//Filter and Modal radio/checked input styles 
-button, input[type="submit"], input[type="reset"] {
+//Filter and Modal radio/checkbox input styles 
+.modal__submit, .modal__submit--desktop[type="submit"] {
   background: none;
   color: inherit;
   border: none;
@@ -9,15 +9,15 @@ button, input[type="submit"], input[type="reset"] {
   outline: inherit;
 }
 
-input[type=checkbox] {
+.filters__input[type=checkbox] {
   visibility: hidden;
 }
 
-input[type=radio] {
+.modal__input--radio[type=radio] {
   visibility: hidden;
 }
 
-input[type="checkbox"] + label span {
+.filters__input[type="checkbox"] + .filters__label .filters__check {
   display:inline-block;
   width:21px;
   height:21px;
@@ -26,11 +26,11 @@ input[type="checkbox"] + label span {
   border-radius: 5px;
 }
 
-input[type="checkbox"]:checked + label span {
+.filters__input[type="checkbox"]:checked + .filters__label .filters__check {
   border: 7px solid $color-primary;
 }
 
-input[type="radio"] + label span {
+.modal__input--radio[type="radio"] + .modal__light .modal__radio {
   display:inline-block;
   width:17px;
   height:17px;
@@ -39,6 +39,22 @@ input[type="radio"] + label span {
   border-radius: 5px;
 }
 
-input[type="radio"]:checked + label span {
+.modal__input--radio[type="radio"]:checked + .modal__light .modal__radio {
   border: 6px solid $color-primary;
+}
+
+@media screen and (min-width: 904px) {
+  .modal__input--radio[type="radio"] + .modal__light .modal__radio {
+    display:inline-block;
+    width: 4rem;
+    height: auto;
+    border: 1px solid #b4b1b1;
+    border-radius: 5px;
+    //padding: 1rem 2rem;
+  }
+  .modal__input--radio[type="radio"]:checked + .modal__light .modal__radio {
+    background-color: #2bcece;
+    color: $color-light;
+    border: 1px solid #b4b1b1;
+  }
 }
