--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -61,7 +61,7 @@ a:visited {
   text-decoration: none;
   color: #1f59b1; }
 
-button, input[type="submit"], input[type="reset"] {
+.modal__submit, .modal__submit--desktop[type="submit"] {
   background: none;
   color: inherit;
   border: none;
@@ -70,13 +70,13 @@ button, input[type="submit"], input[type="reset"] {
   cursor: pointer;
   outline: inherit; }
 
-input[type=checkbox] {
+.filters__input[type=checkbox] {
   visibility: hidden; }
 
-input[type=radio] {
+.modal__input--radio[type=radio] {
   visibility: hidden; }
 
-input[type="checkbox"] + label span {
+.filters__input[type="checkbox"] + .filters__label .filters__check {
   display: inline-block;
   width: 21px;
   height: 21px;
@@ -84,10 +84,10 @@ input[type="checkbox"] + label span {
   border: 1px solid #b4b1b1;
   border-radius: 5px; }
 
-input[type="checkbox"]:checked + label span {
+.filters__input[type="checkbox"]:checked + .filters__label .filters__check {
   border: 7px solid #1f59b1; }
 
-input[type="radio"] + label span {
+.modal__input--radio[type="radio"] + .modal__light .modal__radio {
   display: inline-block;
   width: 17px;
   height: 17px;
@@ -95,9 +95,21 @@ input[type="radio"] + label span {
   border: 1px solid #b4b1b1;
   border-radius: 5px; }
 
-input[type="radio"]:checked + label span {
+.modal__input--radio[type="radio"]:checked + .modal__light .modal__radio {
   border: 6px solid #1f59b1; }
 
+@media screen and (min-width: 904px) {
+  .modal__input--radio[type="radio"] + .modal__light .modal__radio {
+    display: inline-block;
+    width: 4rem;
+    height: auto;
+    border: 1px solid #b4b1b1;
+    border-radius: 5px; }
+
+  .modal__input--radio[type="radio"]:checked + .modal__light .modal__radio {
+    background-color: #2bcece;
+    color: #ffffff;
+    border: 1px solid #b4b1b1; } }
 @font-face {
   font-family: 'OpenSans';
   src: url("../fonts/opensans-extrabold.ttf") format("tff");
@@ -343,14 +355,14 @@ input[type="radio"]:checked + label span {
   .modal__light--top {
     margin-right: -0.75rem; }
 
-  .modal__input--radio[type="radio"] + label span {
+  .modal__input--radio[type="radio"] + .modal__light .modal__radio {
     display: inline-block;
     width: 4rem;
     height: auto;
     border: 1px solid #b4b1b1;
     border-radius: 5px; }
 
-  .modal__input--radio[type="radio"]:checked + label span {
+  .modal__input--radio[type="radio"]:checked + .modal__light .modal__radio {
     background-color: #2bcece;
     color: #ffffff;
     border: 1px solid #b4b1b1; } }
