--- a/resources/css/partials/_base.scss
+++ b/resources/css/partials/_base.scss
@@ -29,6 +29,7 @@ $color-border: #d1cdcd;
 $color-black: #000000;
 $color-background: #f5f3f3;
 $color-shadow: #696b6d;
+$color-link: #696b6d;
 
 // Global Mixins
 @mixin flex($justify-content, $align-items, $flex-direction) {
