--- a/resources/css/partials/_media.scss
+++ b/resources/css/partials/_media.scss
@@ -153,7 +153,7 @@
     &__item {
       list-style-type: none;
       display: inline;
-      margin: 1rem;
+      margin-right: 1rem;
       color: $color-light;
       
       &:hover {
