--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -353,19 +353,7 @@ a:visited {
   .modal__input--radio {
     margin-right: -0.5rem; }
   .modal__light--top {
-    margin-right: -0.75rem; }
-
-  .modal__input--radio[type="radio"] + .modal__light .modal__radio {
-    display: inline-block;
-    width: 4rem;
-    height: auto;
-    border: 1px solid #b4b1b1;
-    border-radius: 5px; }
-
-  .modal__input--radio[type="radio"]:checked + .modal__light .modal__radio {
-    background-color: #2bcece;
-    color: #ffffff;
-    border: 1px solid #b4b1b1; } }
+    margin-right: -0.75rem; } }
 .nav__container {
   position: relative;
   box-shadow: 0 2px 1px 1px #696b6d; }
