--- a/resources/css/partials/_modal.scss
+++ b/resources/css/partials/_modal.scss
@@ -8,8 +8,7 @@
   width: 100%; 
   height: 100%; 
   overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
+  background-color: #00000060;
 
   &__content {
     position: relative;
@@ -194,7 +193,6 @@
       top: 0.25rem;
       left: 35.75rem;
       position: absolute;
-      color: $color-light;
     }
 
     &__close:hover,
