--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -149,8 +149,7 @@ a:visited {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: black;
-  background-color: rgba(0, 0, 0, 0.4); }
+  background-color: #00000060; }
   .modal__content {
     position: relative;
     background-color: #fefefe;
@@ -289,8 +288,7 @@ a:visited {
     color: #ffffff;
     top: 0.25rem;
     left: 35.75rem;
-    position: absolute;
-    color: #ffffff; }
+    position: absolute; }
   .modal__close:hover, .modal__close:focus {
     color: #000000;
     text-decoration: none;
@@ -461,8 +459,7 @@ a:visited {
     align-items: center;
     flex-direction: row;
     font-size: 0.9rem;
-    font-weight: 700;
-    margin: 0 auto; }
+    font-weight: 700; }
   .filters__result {
     color: #2f77e2;
     margin-right: 0rem;
@@ -496,9 +493,9 @@ a:visited {
     transition-duration: 0.75s;
     transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
     background-color: #ffffff;
-    width: 90%;
-    margin: 0 auto;
-    margin-top: -1.1rem; }
+    width: 323.5px;
+    position: relative;
+    top: -1.1rem; }
   .filters__input {
     margin-bottom: 1rem; }
   .filters__label {
@@ -516,7 +513,7 @@ a:visited {
     left: 8rem;
     width: 1.5rem; }
   .filters__form--open {
-    height: 240px !important;
+    height: 240px;
     position: relative;
     padding-left: 1rem;
     border: 1.25px solid #d1cdcd; }
@@ -537,9 +534,6 @@ a:visited {
   .business__title {
     font-size: 1.5rem;
     font-weight: 200;
-    margin-bottom: 1.5rem; }
-  .business__time {
-    font-size: 0.9rem;
     margin-bottom: 1.5rem; }
   .business__image {
     width: 12%; }
@@ -566,7 +560,7 @@ a:visited {
     font-size: 0.83rem;
     font-weight: 200;
     font-style: italic;
-    margin-bottom: 1.5rem !important; }
+    margin-bottom: 1.5rem; }
   .business__contact {
     display: flex;
     justify-content: center;
@@ -589,6 +583,8 @@ a:visited {
     font-weight: 700;
     margin-bottom: 0.75rem; }
   .business__time {
+    font-size: 0.9rem;
+    font-weight: 400;
     margin-top: 0;
     margin-bottom: 0.75rem; }
   .business__info {
@@ -670,7 +666,7 @@ a:visited {
 .top {
   display: none; }
 
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 550px) {
   .nav__find {
     font-size: 1.25rem;
     font-weight: 400; }
@@ -702,6 +698,10 @@ a:visited {
   .business__contact {
     max-width: 50%; }
 
+  .business__container {
+    max-width: 500px;
+    margin: 0 auto; }
+
   .footer__social {
     justify-content: space-around; } }
 @media screen and (min-width: 904px) {
@@ -713,10 +713,6 @@ a:visited {
     margin-bottom: -2rem; }
 
   .nav__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
     height: 100px;
     margin: 0 auto;
     width: 100%;
@@ -824,7 +820,6 @@ a:visited {
     position: relative;
     z-index: 3; }
     .filters__head {
-      margin: 0 auto;
       margin: 0;
       background-color: #f5f3f3;
       border: none; }
@@ -839,6 +834,7 @@ a:visited {
       justify-content: center;
       align-items: center;
       flex-direction: row;
+      position: static;
       background-color: #f5f3f3;
       height: auto;
       border: none;
@@ -912,12 +908,7 @@ a:visited {
       display: none; }
 
   /* Footer Styles ----- */
-  .footer__container {
-    color: #ffffff;
-    text-align: center; }
-
   .footer--top {
-    background-color: #1f59b1;
     padding-top: 2rem;
     padding-bottom: 0.75rem; }
   .footer--bottom {
