--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -271,7 +271,7 @@ a:visited {
   .modal__submit[type=submit] {
     color: #29d4c6;
     float: right; }
-  .modal__opt--dk, .modal__submit--desktop, .modal__arrow {
+  .modal__opt--dk, .modal__submit--desktop, .modal__arrow, .modal__terms {
     display: none; }
 
 @media screen and (min-width: 904px) {
@@ -351,7 +351,13 @@ a:visited {
   .modal__input--radio {
     margin-right: -0.5rem; }
   .modal__light--top {
-    margin-right: -0.75rem; } }
+    margin-right: -0.75rem; }
+  .modal__terms {
+    font-size: 0.75rem;
+    font-weight: 200;
+    display: block;
+    background-color: #f5f3f3;
+    padding: 1rem; } }
 .nav__container {
   position: relative;
   box-shadow: 0 2px 1px 1px #696b6d; }
